<resources>
    <string name="app_name">CycloVille V4</string>
    <string name="app_tag_line">Transforming Kenya into a Cycling Nation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="signIn">SIGN IN</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="description">Description</string>

    <string name="nav_header_title">CycloVille Kenya</string>
    <string name="nav_header_subtitle">cycloville.co.ke</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="price">KSH 100</string>

    <!-- New Ones -->
    <string name="user_name">Jacklin Silva</string>
    <string name="user_mail">Jacky@mail.com</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem_long">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque.
    Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna.</string>

    <!--All data for ActivityMain.java -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

</resources>
